--- a/adk/FullColorLed/AndroidManifest.xml
+++ b/adk/FullColorLed/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         
-        <activity android:name="com.tomovwgti.android.accessory.UsbAccessoryActivity" android:label="FullColor Demo"
+        <activity android:name="com.tomovwgti.android.accessory.UsbAccessoryActivity" android:label="@string/demokit"
             android:taskAffinity="" android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED" />
