--- a/adk/VoiceLedKit/AndroidManifest.xml
+++ b/adk/VoiceLedKit/AndroidManifest.xml
@@ -15,7 +15,7 @@
             </intent-filter>
         </activity>
 
-		<activity android:name="com.tomovwgti.android.accessory.UsbAccessoryActivity" android:label="DemoKit"
+		<activity android:name="com.tomovwgti.android.accessory.UsbAccessoryActivity" android:label="@string/demokit"
 			android:taskAffinity="" android:launchMode="singleInstance">
 			<intent-filter>
 				<action android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED" />
