--- a/adk/ScrollMaps/AndroidManifest.xml
+++ b/adk/ScrollMaps/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_launcher_demokit"
         android:label="@string/app_name" >
         <uses-library android:name="com.android.future.usb.accessory" />
         <activity
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
 
-	    <activity android:name="com.tomovwgti.android.accessory.UsbAccessoryActivity" android:label="Scroll Map"
+	    <activity android:name="com.tomovwgti.android.accessory.UsbAccessoryActivity" android:label="@string/demokit"
 	        android:taskAffinity="" android:launchMode="singleInstance">
 	        <intent-filter>
 	            <action android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED" />
