--- a/adk/WeatherReport/AndroidManifest.xml
+++ b/adk/WeatherReport/AndroidManifest.xml
@@ -10,8 +10,9 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_launcher_demokit"
         android:label="@string/app_name" >
+        <uses-library android:name="com.android.future.usb.accessory" />
         <activity
             android:name=".WeatherReportActivity"
             android:label="@string/app_name" >
@@ -20,6 +21,16 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        
+        <activity android:name="com.tomovwgti.android.accessory.UsbAccessoryActivity" android:label="@string/demokit"
+            android:taskAffinity="" android:launchMode="singleInstance">
+            <intent-filter>
+                <action android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED" />
+            </intent-filter>
+
+            <meta-data android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED"
+                android:resource="@xml/accessory_filter" />
         </activity>
     </application>
 
