--- a/android/WebSocket/.classpath
+++ b/android/WebSocket/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="lib/weberknecht-0.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jsonic-1.2.10.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
