--- a/android/WebSocket/AndroidManifest.xml
+++ b/android/WebSocket/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name="com.tomovwgti.websocket.WebSocketActivity"
+            android:name=".WebSocketActivity"
             android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name" >
