--- a/android/Socketio/AndroidManifest.xml
+++ b/android/Socketio/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_launcher_demokit"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo" >
         <uses-library android:name="com.android.future.usb.accessory" />
