--- a/adk/ScrollMaps/project.properties
+++ b/adk/ScrollMaps/project.properties
@@ -9,4 +9,4 @@
 
 # Project target.
 target=Google Inc.:Google APIs:15
-android.library.reference.1=../../../forMegaADK/forMageAdkLib
+android.library.reference.1=../../forMageAdkLib
