modified forMegaAdk (miss spelling)

--- a/adk/LedControl/project.properties
+++ b/adk/LedControl/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-16
-android.library.reference.1=../../forMageAdkLib
+android.library.reference.1=../../forMegaAdkLib
