Apply google play services lib

--- a/adk/WeatherReport/project.properties
+++ b/adk/WeatherReport/project.properties
@@ -10,3 +10,4 @@
 # Project target.
 target=Google Inc.:Google APIs:15
 android.library.reference.1=../../forMegaAdkLib
+android.library.reference.2=../../../../sdk/extras/google/google_play_services/libproject/google-play-services_lib
